[package]
name = "GraphQL"
version = "0.1.0"
authors = ["Cain T Huang <countcainht@gmail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "A reference implementation of GraphQL for Rust lang."

# These URLs point to more information about the repository
documentation = "..."
homepage = "https://github.com/countcain/graphql-rust"
repository = "https://github.com/countcain/graphql-rust.git"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "..."

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["GraphQL"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "..."

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key)
