[package]
name = "graph_ql"
version = "0.1.1"
authors = ["Tao Huang <countcainht@gmail.com>"]
description = "A reference implementation of GraphQL for Rust lang."

documentation = "https://github.com/countcain/graphql-rust"
homepage = "https://github.com/countcain/graphql-rust"
repository = "https://github.com/countcain/graphql-rust"
keywords = ["GraphQL"]
readme = "README.md"

license-file = "LICENSE.md"
